--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -298,7 +298,7 @@
 			<script>
 			    function onOff(){
 					$.ajax({
-					 type: "POST",
+					 type: "GET",
 					 contentType: "application/json; charset=utf-8",
 					 url: "/onoff",
 					 data: "",
