--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -334,7 +334,7 @@
 					});
 				}
 			</script>
-			<button onclick="off();">Encender</button>
+			<button onclick="off();">Apagar</button>
          </div>
          <!--
          <div>
