--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -298,7 +298,7 @@
 			<script>
 			    function on(){
 					$.ajax({
-					 type: "POST",
+					 type: "GET",
 					 contentType: "application/json; charset=utf-8",
 					 url: "/on",
 					 data: "",
@@ -318,7 +318,7 @@
 			<script>
 			    function off(){
 					$.ajax({
-					 type: "POST",
+					 type: "GET",
 					 contentType: "application/json; charset=utf-8",
 					 url: "/off",
 					 data: "",
