--- a/SmartFICApp/templates/base.html
+++ b/SmartFICApp/templates/base.html
@@ -22,12 +22,12 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="/">Home</a></li>
+                <li><a href="/">Home</a></li>
 				<li>
-				<a href="/maxmin">MaxMinFullTime</a>
+				<a href="/maxmin">Estadísticas</a>
 				</li>
 				<li>
-				<a href="/maxmin7dias">MaxMin7dias</a>
+				<a href="/maxmin7dias">Última semana</a>
 				</li>
 		</li>	
             </ul>
