--- a/SmartFICApp/templates/base.html
+++ b/SmartFICApp/templates/base.html
@@ -27,7 +27,7 @@
 				<a href="/maxmin">Estadísticas</a>
 				</li>
 				<li>
-				<a href="/maxmin7dias">Última semana</a>
+				<a href="/maxmin7dias">7 días</a>
 				</li>
 		</li>	
             </ul>
