--- a/SmartFICApp/templates/base.html
+++ b/SmartFICApp/templates/base.html
@@ -18,11 +18,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/home">SmartFIC</a>
+            <a class="navbar-brand" href="/">SmartFIC</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
+                <li><a href="/home">Home</a></li>
 				<li>
 				<a href="/maxmin">Estadísticas</a>
 				</li>
