--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -335,6 +335,7 @@
 				}
 			</script>
 			<button onclick="off();">Apagar</button>
+			<a>{{led1State}}</a>
          </div>
          <!--
          <div>
