--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -295,7 +295,7 @@
          <div id = "medidores">
             <div id="containerHum" style="min-width: 310px; max-width: 400px; height: 300px; margin: 0 auto;display:inline-block;" ></div>
             <div id="containerTemp" style="min-width: 310px; max-width: 400px; height: 300px; margin: 0 auto; display:inline-block;" ></div>
-            {% if {{led1State}} == 1 %}
+            {% if led1State == 1 %}
 			<script>
 			    function off(){
 					$.ajax({
