--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -315,6 +315,17 @@
 					});
 				}
 			</script>
+			<button class="ledContainer" onclick="off();">
+				
+			</button>
+
+div {
+    background-repeat: no-repeat;
+    background-position: 50%;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+}
 			<button onclick="off();">Apagar</button>
 			{% else %}
 			<script>
