--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -315,7 +315,11 @@
 					});
 				}
 			</script>
-			<button class="ledContainer" onclick="off();"></button>
+			<div class="ledContainer">
+				<button onclick="off();">
+					
+				</button>
+			</div>
 			<!--<button onclick="off();">Apagar</button> 
 			-->
 			{% else %}
