--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -315,7 +315,7 @@
 					});
 				}
 			</script>
-			<div class="ledContainer">
+			<div class="ledContainer"> HOLA
 
 			</div>
 			<!--<button onclick="off();">Apagar</button> 
