--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -316,6 +316,7 @@
 				}
 			</script>
 			<div class="ledContainer"> HOLA
+				<img src="./images/ledOn.jpg" alt="Mountain View" style="width:304px;height:228px;">
 
 			</div>
 			<!--<button onclick="off();">Apagar</button> 
