--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -314,12 +314,12 @@
 					 cache: false
 					});
 				}
-			{% load static %}
+			
 
 			</script>
-			<div class="ledContainer"> HOLA
-				
-				<img src="{% static "images/ledOn.jpg" %}" alt="My image"style="width:304px;height:228px;"/>
+			<div class="ledContainer"> 				
+				<!-- <img src="{% static "images/ledOn.jpg" %}" alt="My image"style="width:304px;height:228px;"/>
+				-->
 			</div>
 			<!--<button onclick="off();">Apagar</button> 
 			-->
