--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -318,10 +318,10 @@
 			
 
 			</script>
-			<div class="ledContainer" style = "background-image: url({% static "images/ledOn.jpg" %});"> 				
-				<!-- <img src="{% static "images/ledOn.jpg" %}" alt="My image"style="width:304px;height:228px;"/>
-				-->
-			</div>
+			<a href="https://www.google.com/" target="_blank">
+				<img src="src="{% static "images/ledOn.jpg" %}"">
+				</img>
+			</a>
 			<!--<button onclick="off();">Apagar</button> 
 			-->
 			{% else %}
