--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -318,10 +318,7 @@
 			
 
 			</script>
-			<div class="ledContainer" > 				
-				 <img src="{% static "images/ledOn.jpg" %}" alt="My image"style="width:304px;height:228px;"/>
-			</div>
-			<a href="https://www.google.com/" target="_blank">
+			<a href="off();" target="_blank">
 				<img src="{% static "images/ledOn.jpg" %}">
 				</img>
 			</a>
