--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -322,8 +322,8 @@
 				<img src="{% static "images/ledOn.jpg" %}">
 				</img>
 			</a>
-			<!--<button onclick="off();">Apagar</button> 
-			-->
+			<button onclick="off();">Apagar</button> 
+			
 			{% else %}
 			<script>
 			    function on(){
