--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -319,7 +319,7 @@
 
 			</script>
 			<a class="ledContainer" href="/off" target="_blank">
-				<img src="{% static "images/ledOn.jpg" %}">
+				<img class="led" src="{% static "images/ledOn.jpg" %}">
 				</img>
 			</a>
 			<button onclick="off();">Apagar</button> 
