--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -344,6 +344,10 @@
 					});
 				}
 			</script>
+			<a class="ledContainer" href="/on" target="_blank">
+				<img class="led" src="{% static "images/ledOff.jpg" %}">
+				</img>
+			</a>
 			<button onclick="on();">Encender</button>
 			{% endif %}
 		 <a>{{led1State}}</a>
