Test Imagen link

--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -344,7 +344,7 @@
 					});
 				}
 			</script>
-			<a class="ledContainer" href="/on" target="_blank">
+			<a class="ledContainer" onclick="on();" target="_blank">
 				<img class="led" src="{% static "images/ledOff.jpg" %}">
 				</img>
 			</a>
