--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -318,7 +318,7 @@
 			
 
 			</script>
-			<a class="ledContainer" href="/off" target="_blank">
+			<a class="ledContainer" onclick="off();" target="_blank">
 				<img class="led" src="{% static "images/ledOn.jpg" %}">
 				</img>
 			</a>
