--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -307,7 +307,7 @@
 					 dataType: "json",
 					 async: true,
 					 success: function (data, textStatus) {
-					   
+					   //idImagen.src="images/ledOff.jpg"
 					 },
 					 error: function (data, status, error) {
 					 
@@ -335,7 +335,7 @@
 					 dataType: "json",
 					 async: true,
 					 success: function (data, textStatus) {
-					   
+					   //idImagen.src="images/ledOn.jpg"
 					 },
 					 error: function (data, status, error) {
 					 
