--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -319,7 +319,7 @@
 
 			</script>
 			<div class="ledContainer" onclick="off();" target="_blank">
-				<img class="led" src="{% static "images/ledOn.jpg" %}">
+				<img class="led" src="{% static "images/ledOn.png" %}">
 				</img>
 			</div>
 			<button onclick="off();">Apagar</button> 
@@ -345,7 +345,7 @@
 				}
 			</script>
 			<div class="ledContainer" onclick="on();" target="_blank">
-				<img class="led" src="{% static "images/ledOff.jpg" %}">
+				<img class="led" src="{% static "images/ledOff.png" %}">
 				</img>
 			</div>
 			<button onclick="on();">Encender</button>
