Cambios en la presentacion del proyecto

--- a/SmartFICApp/templates/presentacion.html
+++ b/SmartFICApp/templates/presentacion.html
@@ -178,10 +178,10 @@ If you want to have a static message in your intro layout, disable the dynamic-t
     <div class="col-md-10 col-md-offset-1">
       <h2 id="about">Acerca de</h2>
 
-<p>SmartFIC es un proyecto de fin de grado realizado en la Facultad de informática de la Coruña.</p>
+<p>SmartFIC es un proyecto de fin de grado realizado en la Facultad de informática de A Coruña.</p>
 
 <p>El proyecto tiene como finalidad llevar a cabo una comunicación inalámbrica entre diferentes nodos distribuidos en un espacio. 
-Midiendo temperatura y humedad, aunque añadir otros tipos de datos a analizar implicaría pequeños cambios en el código, enfocado a ser desplegado en un espacio pequeño como una vivienda o un pequeño huerto.
+Midiendo temperatura y humedad, aunque añadir otros tipos de datos a analizar implicaría pequeños cambios en el código, está enfocado a ser desplegado en un espacio pequeño como una vivienda o un pequeño huerto.
 </p>
 
 <p>
@@ -221,7 +221,7 @@ De esta manera, entenderemos mejor en qué ambiente vivimos o trabajamos pudiend
                 <h4>FASE 1</h4>
               </div>
               <div class="timeline-body">
-                <p>Implementación del código para leer los parámetros y enviarlos vía wiereless.</p>
+                <p>Implementación del código para leer los parámetros y enviarlos vía wireless.</p>
               </div>
             </div>
           </li>
