--- a/SmartFICApp/templates/base.html
+++ b/SmartFICApp/templates/base.html
@@ -6,6 +6,9 @@
 		<title>SmartFIC{% block title %}{% endblock %}</title>
 		<link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
 		<link href="{% static "flipclock/flipclock.css" %}" rel="stylesheet">
+		<link rel="icon" type="image/png" href="../static/images/favicon.png" />
+
+
 	</head>
 	<body>
 		<nav class="navbar navbar-inverse navbar-fixed-top">
