Grandes cambios, anadidos seccion de ajustes y mejoras en la recoleccion de datos.

--- a/SmartFICApp/templates/base.html
+++ b/SmartFICApp/templates/base.html
@@ -33,6 +33,9 @@
 						<li>
 							<a href="/maxmin7dias">7 días</a>
 						</li>
+						<li>
+							<a href="/ajustes">Ajustes</a>
+						</li>
 						</li>
 					</ul>
 					<div class="clock" style="zoom: 0.3;"></div>
