Mejoras en la interfaz

--- a/SmartFICApp/templates/maxmin.html
+++ b/SmartFICApp/templates/maxmin.html
@@ -17,7 +17,7 @@
 	{% load chartit %}
 
 	<meta charset="UTF-8">
-	<link rel="stylesheet" type="text/css" href="{% static 'home.css' %}" />
+	<link rel="stylesheet" type="text/css" href="{% static '7dias.css' %}" /> 
 	<script type="text/javascript">
 		var clock;	
 		$(document).ready(function() {
