- Reloj en la barra de navegador + Mejoras en los ficheros de CSS y HTML

--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -6,18 +6,9 @@
 <!DOCTYPE html>
 <html lang="es">
    <head>
-      <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-      <script src="http://code.highcharts.com/highcharts.js"></script>
-      <script src= "/static/flipclock/flipclock.min.js"></script>
-      <script src="https://code.highcharts.com/highcharts-more.js"></script>
-      <script src="https://code.highcharts.com/modules/exporting.js"></script>
-      {% load chartit %}
-      <meta charset="UTF-8">
-      <link rel="stylesheet" type="text/css" href="{% static 'home.css' %}" />
-
+		{% load chartit %}
       <script>
-         //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-         //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+         //Script que usa HighCharts para crear el contador de humedad principal
          $(function () {
          
              Highcharts.chart('containerHum', {
@@ -137,13 +128,10 @@
              }
          );
          });
-         
-         //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
          //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
       </script>
       <script>
-         //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
-         //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+         //Script que usa HighCharts para crear el contador de temperatura principal
          $(function () {
          
              Highcharts.chart('containerTemp', {
