--- a/SmartFICApp/static/home.css
+++ b/SmartFICApp/static/home.css
@@ -1,194 +1,99 @@
-{% load static %}
-body {
-	background-color: #908E8E;
-	background: linear-gradient(#908E8E, #B5B5B5);
-	margin: 0px;
-	padding: 0;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 100%;
-}
-
-header{
-  background: #3C3C3C;
-  color: #FFFFFF;
-  height: 6vh;
-  font-size: 5vh;
-  line-height: 5vh;
-  font-weight: 900;
-
+header {
+	background:#3C3C3C;
+	color:#FFF;
+	height:6vh;
+	font-size:5vh;
+	line-height:5vh;
+	font-weight:900;
 }
 
 .navbar-brand {
-    float: left;
-    height: 50px;
-    padding: 15px 15px;
-    font-size: 18px;
-    line-height: 5vh;
-}
-
-.clock{
-  width: 500px;
-  margin-left: auto;
-  zoom: 0.3;
-  -moz-transform-origin: 0 0;
-  -moz-transform: scale(.25);
-}
-
-#text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: #fff;
-  width: 100%;
+	float:left;
+	height:50px;
+	font-size:18px;
+	line-height:5vh;
+	padding:15px;
 }
 
 .footer {
-  position: fixed;
-  width: 100vw;
-  height: 7vh;
-  bottom: 0;
-  left: 0;
-  background-color: #3C3C3C;
-  text-align: center;
-  color: #FFFFFF;
-
-	display: flex;
-    align-items: center;
-    justify-content: center;
+	position:fixed;
+	width:100vw;
+	height:7vh;
+	bottom:0;
+	left:0;
+	background-color:#3C3C3C;
+	text-align:center;
+	color:#FFF;
+	display:flex;
+	align-items:center;
+	justify-content:center;
 }
 
 .footer p {
-	margin-right: 40px;
+	margin-right:40px;
 }
 
-#container{
-  width: 50vw;
-  height: 40vh;
-  margin-top:5vh;
-      margin-bottom: 80px;
-}
-#container7dias{
-  width: 50vw;
-  height: 40vh;
+#container {
+	width:50vw;
+	height:40vh;
+	margin-top:5vh;
+	margin-bottom:80px;
 }
 
-.led{
-    border-radius: 50%;
-    max-width: 14vw;
-    max-height:29vh;
-    vertical-align: baseline;
+.led {
+	border-radius:50%;
+	max-width:14vw;
+	max-height:29vh;
+	vertical-align:baseline;
 }
 
-.ledContainer { 
-    position: relative; 
-    display: inline-block;
-    width: 14vw;
-    height: 29vh;
-    cursor: pointer;
-}
-
-.humContainer { 
-    position: relative; 
-    height: 25vh;
-    display: inline-block;
-    width:23%;
-    background-image: url(./images/gota.png);
-    background-repeat: no-repeat;
-    background-position: center center;
-}
-
-h2 { 
-   position: absolute; 
-   top: 40%; 
-   color: white;
-   left: 0.5%;
-   font-size: 24px;
-   width: 99%; 
-}
-
-.tempContainer { 
-   position: relative; 
-    height: 25vh;
-    display: inline-block;
-    width: 32vh;
-   background-image: url(./images/termo.png);
-   background-repeat: no-repeat;
-   background-size: 10vh 10vw;
-   background-position: center center;
-   background-size: 25vh;
-}
-
-
-h3 { 
-   position: absolute; 
-   top: 55%; 
-   color: white;
-   left: 0.5%;
-   font-size: 24px;
-   width: 99%; 
-}
-
-
-ul, ol {
-	list-style:none;
-    	height: 7vh;
-	font-size: 0PX;
-	-webkit-margin-before: 0px;
-	-webkit-margin-after: 0px;
-	-webkit-margin-start: 0px;
-	-webkit-margin-end: 0px;
-	-webkit-padding-start: 0px;
-}
-
-.nav > li {
-	display: inline-block;
-	font-size: medium;
-	float: none;
-	color: white;
-}
-.nav li a {
-	color: #000;
-	height: 7vh;
-    	    width: 16vh;
-	text-decoration: none;
-	padding: 30px 12px;
-	line-height: 20px;
-	display: block;
-	font-weight: 900;
-	text-align: center;
-}
-.nav li a:hover {
-	background-color:#333;
-}
-.nav li ul {
-	display:none;
-	position:absolute;
-	min-width:100px;
-	font-size: medium;
-}
-.nav li ul:before {
-	margin: 0px;
-}
-.nav li:hover > ul {
-	display:block;
-}
-.nav li ul li {
+.ledContainer {
 	position:relative;
-}
-.nav li ul li ul {
-	right:-140px;
-	top:0px;
+	display:inline-block;
+	width:14vw;
+	height:29vh;
+	cursor:pointer;
 }
 
-@media (max-width: 920px) {
-		#medidores {
-			display: flex;
-			flex-direction: column;		
+.humContainer {
+	position:relative;
+	height:25vh;
+	display:inline-block;
+	width:23%;
+	background-image:url(./images/gota.png);
+	background-repeat:no-repeat;
+	background-position:center center;
+}
+
+.tempContainer {
+	position:relative;
+	height:25vh;
+	display:inline-block;
+	width:32vh;
+	background-image:url(./images/termo.png);
+	background-repeat:no-repeat;
+	background-position:center center;
+	background-size:25vh;
+}
+
+.nav li a {
+	color:#000;
+	height:6vh;
+	width:16vh;
+	text-decoration:none;
+	line-height:20px;
+	display:block;
+	font-weight:600;
+	text-align:center;
+	padding:30px 12px;
+}
+
+@media max-width 920px{
+	#medidores {
+		display:flex;
+		flex-direction:column;
 	}
-
-.footer {
-	flex-direction: column;
-}
+	.footer {
+		flex-direction:column;
+	}
 }
