--- a/SmartFICApp/templates/base.html
+++ b/SmartFICApp/templates/base.html
@@ -5,9 +5,17 @@
 	<head>
 		<title>SmartFIC{% block title %}{% endblock %}</title>
 		<link href="{% static "bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
-		<link href="{% static "flipclock/flipclock.css" %}" rel="stylesheet">
 		<link rel="icon" type="image/png" href="../static/images/favicon.png" />
-		
+		<link rel="stylesheet" type="text/css" href="{% static 'home.css' %}"/>
+		<link rel="stylesheet" type="text/css" href="{% static 'ajustes.css' %}" />
+		<link rel="stylesheet" type="text/css" href="{% static '7dias.css' %}" /> 
+
+		<meta charset="UTF-8">
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+		<script src="http://code.highcharts.com/highcharts.js"></script>
+		<script src="https://code.highcharts.com/highcharts-more.js"></script>
+		<script src="https://code.highcharts.com/modules/exporting.js"></script>
+		{% load chartit %}
 
 	</head>
 	<body>
