--- a/SmartFICApp/templates/home.html
+++ b/SmartFICApp/templates/home.html
@@ -272,7 +272,7 @@
          //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
       </script>
    </head>
-   <body>
+   <body class="bodyHome">
       <div>
          <div id = "medidores">
 		<div id="containerHum" style="min-width: 310px; max-width: 400px; height: 300px; margin: 0 auto;display:inline-block;" ></div>
